--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,8 @@
   "require": {
     "php": ">=5.3.3",
     "monolog/monolog":"~1.7"
+  },
+  "require-dev": {
+      "phpunit/phpunit": "~3.7"
   }
 }
