--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-  "name": "marcelog/pami",
+  "name": "acos/pami",
   "type": "library",
   "description": "Asterisk Manager Interface (AMI) client for PHP, event driven, object oriented",
   "keywords": ["asterisk","ami","client","telephony","voip","event","action","manager","monitor"],
   "homepage": "http://marcelog.github.com/PAMI",
-  "license": "Apache2",
+  "license": "Apache-2.0",
   "authors": [
     {
       "name": "Marcelo Gornstein",
@@ -20,6 +20,12 @@
   },
   "require": {
     "php": ">=5.3.3",
-    "apache/log4php": "2.3.0"
+    "monolog/monolog":"~1.11"
+  },
+  "require-dev": {
+      "phpunit/phpunit": "~3.7"
+  },
+  "replace": {
+      "marcelog/pami": "self.version"
   }
 }
